--- a/Musanet/web/src/styles/components/_input.scss
+++ b/Musanet/web/src/styles/components/_input.scss
@@ -32,4 +32,11 @@
     font-size: vars.$font-size-xs;
     color: vars.$color-muted;
   }
+
+    &__errors {
+    margin-top: vars.$spacing-sm;
+    padding-left: 1.1rem;
+    font-size: vars.$font-size-xs;
+    color: #f97373;
+  }
 }
