--- a/Musanet/web/src/styles/components/_staff.scss
+++ b/Musanet/web/src/styles/components/_staff.scss
@@ -14,5 +14,18 @@
     color: vars.$color-muted;
     text-align: center;
     padding: vars.$spacing-md;
+
+    svg {
+      width: 100%;
+      height: 100%;
+    }
+
+    svg path,
+    svg line,
+    svg rect,
+    svg text {
+      stroke: vars.$color-text;
+      fill: vars.$color-text;
+    }
   }
 }
