--- a/Musanet/web/src/styles/components/_staff.scss
+++ b/Musanet/web/src/styles/components/_staff.scss
@@ -9,15 +9,18 @@
     border-radius: vars.$radius-md;
     border: 1px dashed vars.$color-border-strong;
     background: vars.$color-surface;
-    @include mixins.flex-center;
     font-size: vars.$font-size-sm;
     color: vars.$color-muted;
     text-align: center;
     padding: vars.$spacing-md;
+    overflow-x: auto;
+    overflow-y: hidden;
+    white-space: nowrap;
 
     svg {
-      width: 100%;
-      height: 100%;
+      // width: 100%;
+      // height: 100%;
+      display: block;
     }
 
     svg path,
