--- a/Musanet/web/src/styles/components/_input.scss
+++ b/Musanet/web/src/styles/components/_input.scss
@@ -39,6 +39,8 @@
     padding-left: 1.1rem;
     font-size: vars.$font-size-xs;
     color: #f97373;
+    white-space: pre-wrap;
+    font-family: monospace;
   }
 }
 
